hphp/hack/test/typecheck/reactive/parse_multiple5.php.exp
File "parse_multiple5.php", line 2, characters 1-21:
Only one of following annotations is allowed: `__Pure`, `__NonRx`, `__Cipp`, `__CippLocal`, `__CippGlobal`. (Parsing[1002])
