hphp/hack/test/typecheck/reactive/parse_multiple5.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

<<__Rx, __RxShallow>>
function f(): void {}
